--- a/easy-qbox-setup.yaml
+++ b/easy-qbox-setup.yaml
@@ -1,5 +1,6 @@
 $engine: 3
 $onesync: on
+$steamRequired: true
 name: QBox Setup FiveM
 author: Four
 description: Recipe for the base resources required to run a minimal FiveM server.
