--- a/server.cfg
+++ b/server.cfg
@@ -18,6 +18,23 @@ set sv_enforceGameBuild 3407
 set resources_useSystemChat true
 set mysql_connection_string "{{dbConnectionString}}"
 
+# Increase Pool Sizes
+increase_pool_size "AttachmentExtension" 430
+increase_pool_size "CMoveObject" 75
+increase_pool_size "EntityDescPool" 20480
+increase_pool_size "FragmentStore" 14000
+increase_pool_size "InteriorProxy" 450
+increase_pool_size "LightEntity" 1000
+increase_pool_size "netGameEvent" 400
+increase_pool_size "OcclusionInteriorInfo" 20
+increase_pool_size "OcclusionPathNode" 5000
+increase_pool_size "OcclusionPortalEntity" 750
+increase_pool_size "OcclusionPortalInfo" 750
+increase_pool_size "PortalInst" 225
+increase_pool_size "ScaleformStore" 200
+increase_pool_size "StaticBounds" 5000
+increase_pool_size "TxdStore" 26000
+
 # Voice config
 exec voice.cfg
 
